// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VideoPlayButton /> Should NOT contain prepended style 1`] = `
<svg
  className="absolute z3"
  onMouseUp={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "filter": "drop-shadow(0px 3px 2px rgba(0,0,0,0.2))",
      "height": "20%",
      "right": "2%",
      "top": "2%",
    }
  }
  viewBox="0 0 140 140"
>
  <circle
    cx="70"
    cy="70"
    r="65"
    style={
      Object {
        "fill": "rgba(255, 255, 255, 0.8)",
      }
    }
  />
  <polygon
    id="shape"
    points="50,40 100,70 100,70 50,100, 50,40"
    style={
      Object {
        "fill": "#666",
      }
    }
  />
</svg>
`;

exports[`<VideoPlayButton /> Should contain prepended style 1`] = `
<svg
  className="absolute z3"
  onMouseUp={[Function]}
  style={
    Object {
      "color": "red",
      "cursor": "pointer",
      "filter": "drop-shadow(0px 3px 2px rgba(0,0,0,0.2))",
      "height": "20%",
      "right": "2%",
      "top": "2%",
    }
  }
  viewBox="0 0 140 140"
>
  <circle
    cx="70"
    cy="70"
    r="65"
    style={
      Object {
        "fill": "rgba(255, 255, 255, 0.8)",
      }
    }
  />
  <polygon
    id="shape"
    points="50,40 100,70 100,70 50,100, 50,40"
    style={
      Object {
        "fill": "#666",
      }
    }
  />
</svg>
`;

exports[`<VideoPlayButton /> Should not break with empty props 1`] = `
<svg
  className="absolute z3"
  onMouseUp={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "filter": "drop-shadow(0px 3px 2px rgba(0,0,0,0.2))",
      "height": "20%",
      "right": "2%",
      "top": "2%",
    }
  }
  viewBox="0 0 140 140"
>
  <circle
    cx="70"
    cy="70"
    r="65"
    style={
      Object {
        "fill": "rgba(255, 255, 255, 0.8)",
      }
    }
  />
  <polygon
    id="shape"
    points="50,40 100,70 100,70 50,100, 50,40"
    style={
      Object {
        "fill": "#666",
      }
    }
  />
</svg>
`;
